# napari-h5

./: .gitignore  README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_h5/: __init__.py  _reader.py  _writer.py  napari.yaml
src/napari_h5/_tests/: test_reader.py  test_writer.py
